Essai d'ajout ProfileUSerType

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,4 +22,11 @@
             <p>{{ video.title }}</p>
         {% endfor %}
     {% endfor %}
+
+
+    {% if is_granted( 'IS_AUTHENTICATED_FULLY') %}
+        <p>Email: {{ app.user.email }}</p>
+    {% else %}
+        <p>Welcome Anonymous</p>
+    {% endif %}
 {% endblock %}
